--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,19 @@
     }
   ],
   "require": {
-    "php": ">=7.0",
-    "cdaguerre/php-trello-api": "^0.9.3",
-    "nesbot/carbon": "^2.34",
-    "vlucas/phpdotenv": "^4.1"
+    "php": ">=8.0",
+    "nesbot/carbon": "^2.67",
+    "nyholm/psr7": "^1.8",
+    "php-http/guzzle7-adapter": "^1.0",
+    "semaio/php-trello-api": "^1.2",
+    "vlucas/phpdotenv": "^5.5"
   },
   "config": {
     "process-timeout": 0,
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "php-http/discovery": true
+    }
   },
   "autoload": {
     "psr-4": {
@@ -32,6 +37,6 @@
     "phpcs": "phpcs --standard=phpcs.xml --extensions=php app/"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^3.5"
+    "squizlabs/php_codesniffer": "^3.7"
   }
 }
